--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
     "build:babel": "webpack-dev-server --config ./babel/webpack.config.js",
-    "build:react": "webpack-dev-server --config ./react/webpack.config.js"
+    "build:react": "webpack-dev-server --config ./react/webpack.config.js",
+    "build:url-loader": "webpack-dev-server --config ./url-loader/webpack.config.js",
+    "build:prepro": "webpack-dev-server --config ./preprocesadores/webpack.config.js"
   },
   "keywords": [
     "webpack"
@@ -31,9 +33,19 @@
     "@babel/preset-react": "7.12.1",
     "babel-loader": "8.1.0",
     "css-loader": "5.0.0",
+    "file-loader": "6.1.1",
     "html-webpack-plugin": "4.5.0",
+    "less": "3.12.2",
+    "less-loader": "7.0.2",
     "mini-css-extract-plugin": "1.0.0",
+    "node-sass": "4.14.1",
+    "postcss-loader": "4.0.4",
+    "postcss-nested": "5.0.1",
+    "sass-loader": "10.0.3",
     "style-loader": "2.0.0",
+    "stylus": "0.54.8",
+    "stylus-loader": "4.1.1",
+    "url-loader": "4.1.1",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2",
     "webpack-dev-server": "3.11.0"
