--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "html-webpack-plugin": "4.5.0",
     "less": "3.12.2",
     "less-loader": "7.0.2",
-    "mini-css-extract-plugin": "1.0.0",
+    "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "4.14.1",
     "postcss-loader": "4.0.4",
     "postcss-nested": "5.0.1",
@@ -51,7 +51,7 @@
     "style-loader": "2.0.0",
     "stylus": "0.54.8",
     "stylus-loader": "4.1.1",
-    "url-loader": "4.1.1",
+    "url-loader": "^4.1.1",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2",
     "webpack-dev-server": "3.11.0"
