--- a/platzi-badges/package.json
+++ b/platzi-badges/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "server": "json-server --port 3001 --watch server/db.json",
+    "server": "json-server --port 3001 --watch server/db.json --static ./dist",
     "seed": "node server/seed.js",
-    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js"
+    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "build:dll": "webpack --config ./webpack.dll.config.js --mode production",
+    "build": "webpack --config ./webpack.config.js --mode production"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -27,14 +29,11 @@
     "file-loader": "6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "json-server": "0.14.2",
+    "mini-css-extract-plugin": "^1.2.1",
     "style-loader": "2.0.0",
-<<<<<<< HEAD
+    "url-loader": "^4.1.1",
     "webpack": "4.33.0",
     "webpack-cli": "3.3.2",
-=======
-    "webpack": "5.2.0",
-    "webpack-cli": "4.1.0",
->>>>>>> dd2a95a409ca44030c4329e25d57bf4e50c38647
     "webpack-dev-server": "3.11.0"
   },
   "eslintConfig": {
