--- a/platzi-badges/package.json
+++ b/platzi-badges/package.json
@@ -18,20 +18,24 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
+    "add-asset-html-webpack-plugin": "3.1.3",
     "babel-loader": "8.1.0",
+    "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
     "faker": "4.1.0",
     "file-loader": "6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "json-server": "0.14.2",
-    "mini-css-extract-plugin": "^1.2.1",
+    "mini-css-extract-plugin": "1.2.1",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
     "style-loader": "2.0.0",
-    "url-loader": "^4.1.1",
+    "terser-webpack-plugin": "^1.3.0",
+    "url-loader": "4.1.1",
     "webpack": "4.33.0",
     "webpack-cli": "3.3.2",
     "webpack-dev-server": "3.11.0"
