--- a/platzi-rooms/package.json
+++ b/platzi-rooms/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js"
+    "start": "http-server dist",
+    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "build": "webpack --config ./webpack.config.js",
+    "build:dll": "webpack --config ./webpack.dll.config.js"
   },
   "dependencies": {
     "@firebase/app": "0.6.12",
@@ -31,6 +31,8 @@
     "css-loader": "2.1.1",
     "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
+    "http-server": "0.12.3",
+    "mini-css-extract-plugin": "1.2.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
